# financial_statements_gen

./: .gitignore  README.md  pyproject.toml
financial_statements_gen/: financial_statements_gen.py
sample/: 2022_1Q_PL.txt  2022_1Q_stock_basic.xlsx  2022_1Q_stock_detail.xlsx  2022_1Q_stock_warning.xlsx
tests/: test_financial_statements_gen.py
